fix: property.scss line 47 => gap:10px is changed to 4px(In location area ulsan suwon and changwon was not appeared)

--- a/scss/pc/property/property.scss
+++ b/scss/pc/property/property.scss
@@ -44,7 +44,7 @@
 							width: 100%;
 							gap: 10px;
 							.property-location {
-								gap: 10px;
+								gap: 4px;
 								height: 115px;
 								overflow: hidden;
 								transition: 1s;
